--- a/layouts/categorias.html
+++ b/layouts/categorias.html
@@ -12,54 +12,52 @@
     <title>Categorias | SuperMarket</title>
   </head>
   <body>
-    <header id="header">
+    <main id="grid-contenedor3">
 
-      <div class="header__logo">
-        <img src="../img/logo.png" alt="logo">
-      </div>
+      <div class="logo"> <img class="nav__logo" src="../img/logo.png" alt="logo"> </div>
 
-      <nav class="header__menu">
-        <ul>
+      <nav class="nav">
+        <ul class="lista">
           <li><a href="./inicio.html">Inicio</a></li>
-          <li><a href="./categorias.html">Categorias</a></li>
+          <li><a href=".categorias.html">Categorias</a></li>
           <li><a href="./ofertas.html">Ofertas</a></li>
           <li><a href="./contacto.html">Contacto</a></li>
         </ul>
       </nav>
+      
+      <div class="banIcbc">
+        <img class="icbc" src="../img/bannericbc.png" alt="supermercado" />
+      </div>
 
-    </header>
-
-    <div>
-      <img class="icbc" src="../img/bannericbc.png" alt="supermercado" />
-    </div>
-
-    <section id="iframe">
-      <h1>Todos nuestros productos, al mejor precio del mercado.</h1>
-      <iframe class="video"
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/Gxn_sez04zw"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+      <div class="iframe">
+        <h1>Todos nuestros productos, al mejor precio del mercado.</h1>
+        <iframe class="video"
+          width="800"
+          height="500"
+          src="https://www.youtube.com/embed/Gxn_sez04zw"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        > </iframe>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis laudantium quia provident quisquam ratione. Incidunt, voluptas a accusantium culpa vero sapiente ea, necessitatibus voluptate placeat natus itaque ipsum officia nisi!
       </p>
-    </section>
+      </div>
 
-    <div>
+    <div class="banner-fot">
       <img class="fot" src="../img/bannerjuntosnoscuidamos.jpg" alt="">
     </div>
 
-    <footer id="footer">
+    <footer class="footer">
       <h4>Nuestras redes</h4>
       <ul class="list">
-        <li class="lista"><a href="#">Facebook</a></li>
-        <li class="lista"><a href="#">Instagram</a></li>
-        <li class="lista"><a href="#">Twitter</a></li>
+        <li class="lista"><img src="../img/index/facebook.png" alt="Facebook"><a class="efecto" href="#">Facebook</a></li>
+        <li class="lista"><img src="../img/index/instagram.png" alt="Instagram"><a class="efecto" href="#">Instagram</a></li>
+        <li class="lista"><img src="../img/index/twitter.png" alt=""><a class="efectot" href="#">Twitter</a></li>
       </ul>
     </footer>
+
+  </main>
   </body>
 </html>
