--- a/layouts/contacto.html
+++ b/layouts/contacto.html
@@ -13,24 +13,24 @@
   </head>
   <body>
     
-      <header id="header">
+    <main id="grid-contenedor4">
 
-        <div class="header__logo">
+        <div class="logo">
           <img src="../img/logo.png" alt="logo">
         </div>
   
-        <nav class="header__menu">
-          <ul>
+        <nav class="nav">
+          <ul class="lista">
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./categorias.html">Categorias</a></li>
             <li><a href="./ofertas.html">Ofertas</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
           </ul>
         </nav>
-    </header>
-    <form>
+    
+    <form class="form">
       <fieldset id="fieldset">
-        <legend>Complete sus datos</legend>
+        <legend><h3>Complete sus datos</h3></legend>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" placeholder="Ingrese su nombre" />
         <br />
@@ -61,17 +61,20 @@
       </fieldset>
     </form>
 
-    <div>
+    <div class="banner-fot">
       <img class="fot" src="../img/bannerjuntosnoscuidamos.jpg" alt="">
     </div>
 
-    <footer id="footer">
-      <h4>Nuestras redes</h4>
+    <footer class="footer">
+      <h4 class="h4">Nuestras redes</h4>
       <ul class="list">
-        <li class="lista"><a href="#">Facebook</a></li>
-        <li class="lista"><a href="#">Instagram</a></li>
-        <li class="lista"><a href="#">Twitter</a></li>
+        <li class="lista"><img src="../img/index/facebook.png" alt="Facebook"><a class="efecto" href="#">Facebook</a></li>
+          <li class="lista"><img src="../img/index/instagram.png" alt="Instagram"><a class="efecto" href="#">Instagram</a></li>
+          <li class="lista"><img src="../img/index/twitter.png" alt=""><a class="efectot" href="#">Twitter</a></li>
       </ul>
     </footer>
+  
+  </main>
+
   </body>
 </html>
