--- a/layouts/inicio.html
+++ b/layouts/inicio.html
@@ -20,15 +20,13 @@
   
         <nav class="nav">
           <ul class="lista">
-            <li><a href="../layouts/inicio.html">Inicio</a></li>
-            <li><a href="../layouts/categorias.html">Categorias</a></li>
-            <li><a href="../layouts/ofertas.html">Ofertas</a></li>
-            <li><a href="../layouts/contacto.html">Contacto</a></li>
+            <li><a href="./inicio.html">Inicio</a></li>
+            <li><a href="./categorias.html">Categorias</a></li>
+            <li><a href="./ofertas.html">Ofertas</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
           </ul>
         </nav>
-  
-      
-  
+    
       <div class="bannerhome">
         <img class="home" src="../img/index/bannerhome.png" alt="supermercado" />
       </div>
