--- a/layouts/ofertas.html
+++ b/layouts/ofertas.html
@@ -19,10 +19,10 @@
 
       <nav class="nav">
         <ul class="lista">
-          <li><a href="./layouts/inicio.html">Inicio</a></li>
-          <li><a href="./layouts/categorias.html">Categorias</a></li>
-          <li><a href="./layouts/ofertas.html">Ofertas</a></li>
-          <li><a href="./layouts/contacto.html">Contacto</a></li>
+          <li><a href="./inicio.html">Inicio</a></li>
+          <li><a href="./categorias.html">Categorias</a></li>
+          <li><a href="./ofertas.html">Ofertas</a></li>
+          <li><a href="./contacto.html">Contacto</a></li>
         </ul>
       </nav>
 
