--- a/layouts/inicio.html
+++ b/layouts/inicio.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://raw.github.com/daneden/animate.css/master/animate.css">
     <title>Inicio</title>
   </head>
 
@@ -79,6 +80,11 @@
       </footer>
   
     </main>
+
+    <script src="js/wow.min.js"></script>
+    <script>
+       new WOW().init();
+    </script>
     
   </body>
 </html>
